# alloctools

./: CMakeLists.txt  README.md
cmake/: alloctools_libfabric.cmake  alloctools_macros.cmake
docs/: index.rst
examples/: CMakeLists.txt
include/alloctools/: alloctools_fwd.hpp  memory_pool.hpp  memory_region.hpp  memory_region_allocator.hpp  memory_region_pointer.hpp
include/alloctools/debugging/: performance_counter.hpp  print.hpp
include/alloctools/detail/: memory_block_allocator.hpp  memory_pool_stack.hpp  memory_region_impl.hpp
include/alloctools/libfabric/: region_provider.hpp
include/alloctools/traits/: memory_region_traits.hpp
